--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,5 +3,5 @@
 
 db.default.driver="org.postgresql.Driver"
 db.default.url="jdbc:postgresql://localhost/playdb"
-db.default.username="felix"
+db.default.username="frank"
 db.default.password=""
