--- a/.classpath
+++ b/.classpath
@@ -433,5 +433,13 @@
 	<classpathentry kind="lib" path="lib/gson-2.8.0.jar"/>
 	<classpathentry kind="lib" path="lib/httpclient-4.5.2.jar"/>
 	<classpathentry kind="lib" path="lib/httpcore-4.4.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Daniel/ULook/lib/gson-2.8.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Daniel/ULook/lib/httpclient-4.5.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Daniel/ULook/lib/httpcore-4.4.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Daniel/ULook/lib/twitter4j-async-4.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Daniel/ULook/lib/twitter4j-core-4.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Daniel/ULook/lib/twitter4j-examples-4.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Daniel/ULook/lib/twitter4j-media-support-4.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Daniel/ULook/lib/twitter4j-stream-4.0.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
