Updated multiple db configured and RequestDBKeyExtractor

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,8 +1,18 @@
 # This is the main configuration file for the application.
 # https://www.playframework.com/documentation/latest/ConfigFile
 
+# The multiple database module
+module.multidb=${play.path}/modules/multidb
+
+#db1
 db.default.driver="org.postgresql.Driver"
 db.default.url="jdbc:postgresql://localhost/playdb"
 db.default.username="postgres"
 db.default.password=" "
+#
 
+# db2
+mdb.default.driver="org.postgresql.Driver"
+mdb.default.url="jdbc:postgresql://localhost/playdb2"
+mdb.default.username="postgres"
+mdb.default.password=" "
